[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bbmd_manager"]

[project]
name = "ace-bbmd-manager"
version = "0.1.0"
description = "CLI tool for managing BACnet BBMD Broadcast Distribution Tables with audit logging and rollback"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bacpypes==0.16.7",
    "click>=8.1.8",
]

[project.scripts]
bbmd-manager = "bbmd_manager.cli:main"

[dependency-groups]
dev = [
    "pyrefly>=0.44.1",
    "ruff>=0.14.8",
    "pytest>=7.0.0",
]
